--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require": {
         "monolog/monolog": "^1.13",
-        "symfony/console": "^3.1"
+        "symfony/console": "^3.1",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "ext-xsl": "*",
